<resources>

    <!-- Activity titles -->
    <string name="app_name">Moto Racing Video</string>
    <string name="ac_name_image_list">Image List Example</string>
    <string name="ac_name_image_grid">Moto Racing Video</string>
    <string name="ac_name_image_pager">Moto Racing Video</string>
    <string name="ac_name_image_gallery">Moto Racing Video</string>
    <!-- Labels -->
    <string name="label_activity_examples">Moto Racing Video</string>
    <string name="menu_item_clear_memory_cache">Clear memory caché</string>
    <string name="menu_item_clear_disc_cache">clear</string>
    <string name="newimt">Refresh Video List</string>
     <string name="button_image_list">Moto Racing Video list</string>
    <string name="button_image_grid">Moto Racing Video grid</string>
    <string name="button_image_pager">Moto Racing Video view</string>
    <string name="button_image_gallery">Moto Racing Video gallery</string>
    <!-- Content descriptions -->
     <string name="feeds">http://videofeeds.lilait.com/carracing.kd</string>
     <string name="urlchat">http://videofeeds.lilait.com/chat/race/</string>
    <string name="descr_image">Image</string>
 <string name="Adid">a1527441663e84b</string>
</resources>